# go/ansar-broker/http/routes.go
@@ -10,5 +10,7 @@ func (s *Server) registerRoutes() {
 
 	s.mux.Handle("POST /api/v1/accounts/open", withRequestLogging(handleOpenAccount(*s.app.Accounts, s.log)))
 	s.mux.Handle("POST /api/v1/users/create", withRequestLogging(handleCreateUser(*s.app.Users, s.log)))
+	s.mux.Handle("GET /api/v1/securities/search", withRequestLogging(handleSearchSecurities(*s.app.Securities, s.log)))
+	// s.mux.Handle("POST /api/v1/orders/place", )
 	s.mux.Handle("GET /swagger/", httpSwagger.WrapHandler)
 }
